--- a/content/copyright.htm
+++ b/content/copyright.htm
@@ -27,7 +27,7 @@
             &nbsp;&nbsp;
           </td>
           <td>
-            <strong>Copyright &copy; 1996-2016 buildingSMART International
+            <strong>Copyright &copy; 1996-2020 buildingSMART International
             Limited. All rights reserved.</strong><br>
             <br>
             Any technical documentation made available by buildingSMART
@@ -109,12 +109,7 @@
             &nbsp;&nbsp;
           </td>
           <td>
-            Written requests should be addressed to: Christopher Groome,
-            Company Secretary, buildingSMART International Limited, 5 The
-            Business Exchange, Rockingham Road, Kettering, Northamptonshire
-            NN16 8JX, United Kingdom (Fax +44 1536 526430, Mobile +44 7973
-            638742, Email <a href=
-            "mailto:chris.groome@b-r-t.co.uk">chris.groome@b-r-t.co.uk</a>).<br>
+            Written requests should be addressed to: buildingSMART International Limited, Kings House, Station Road, Kings Langley, Hertfordshire, WD4 8LZ, UK. Email  <a href="mailto:contact@buildingsmart.org">contact@buildingsmart.org</a>.<br>
             </td>
         </tr>
       </table>
